# Autoaim-RM

./: .gitignore  CMakeLists.txt  run.sh
data/uniconfig/: CamLens.json  Config.json  guard.sh
include/data_manager/: base.h  video_source.h
include/nvtx3/nvtxDetail/: nvtxInit.h
include/threads/: pipeline.h
src/data_manager/: CMakeLists.txt  init.cpp  video_source.cpp
src/threads/: CMakeLists.txt  pipeline.cpp
src/threads/control/: send_thread.cpp
src/threads/pipeline/baseline/: detector_thread.cpp  preprocessor_thread.cpp  tracker_thread.cpp
src/threads/pipeline/baseline/tracker/: pointer.cpp
src/threads/pipeline/fourpoints/: detector_thread.cpp  fourpoints.cpp  preprocessor_thread.cpp
